--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,10 +1,21 @@
 ---
-title: Welcome to Middleman
+title: Welcome to Ruby Karaoke
 ---
 
 <div class="welcome">
-  <h1>Middleman is Watching</h1>
   <p class="doc">
-    <%= link_to "Read Online Documentation", "http://middlemanapp.com/" %>
+    <h1>About</h1>
+	Ruby Karaoke (#rubykaraoke) is a labor to bring the community together behind the microphone.  What better way to make friends and to break the ice at a conference then by singing a few songs with some people, free of judgement?  Ruby Karaoke strives to keep things fun, light, and inclusive!  Everyone is welcome to take the stage or to stay in the crowd and cheer on old friends and new.
+  </p><!-- .doc -->
+</div><!-- .welcome -->
+
+<hr noshade>
+<br />
+
+<a class="twitter-timeline" data-dnt="true" href="https://twitter.com/hashtag/rubykaraoke" 	data-widget-id="527876011271020544">#rubykaraoke Tweets</a>
+            <script>!function(d,s,id){var 	js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+<div class="welcome">
+  <p class="doc">
+    <%= link_to "Built using Middleman", "http://middlemanapp.com/" %>
   </p><!-- .doc -->
 </div><!-- .welcome -->
