--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,16 +4,26 @@ title: Welcome to Ruby Karaoke
 
 <div class="welcome">
   <p class="doc">
-    <h1>About</h1>
+    <h1 align = "center">About</h1>
 	Ruby Karaoke (#rubykaraoke) is a labor to bring the community together behind the microphone.  What better way to make friends and to break the ice at a conference then by singing a few songs with some people, free of judgement?  Ruby Karaoke strives to keep things fun, light, and inclusive!  Everyone is welcome to take the stage or to stay in the crowd and cheer on old friends and new.
+	
+	<h5 align = "center">The Rules</h5>
+	<ul>
+		<li>There are no videos recorded/posted of participants at Ruby Karaoke.</li>
+		<li>There are no videos recorded/posted of participants at Ruby Karaoke.<br /><small>(Pics are ok though)</small></li>
+		<li>Whether you are a novice singer, a shower superstar, or a professional singer, everyone is to show everyone else respect.  A round of applause for bravery on all parts is appreciated and applauded!</li>
+		<li>If it's your first time at Ruby Karaoke, you need to sing.<br /><small>(Just kidding singing is not mandatory, but is encouraged)</small></li>
+	</ul>
+	
   </p><!-- .doc -->
 </div><!-- .welcome -->
 
 <hr noshade>
 <br />
 
-<a class="twitter-timeline" data-dnt="true" href="https://twitter.com/hashtag/rubykaraoke" 	data-widget-id="527876011271020544">#rubykaraoke Tweets</a>
-            <script>!function(d,s,id){var 	js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+<p align = "center"><a class="twitter-timeline" data-dnt="true" href="https://twitter.com/hashtag/rubykaraoke" 	data-widget-id="527876011271020544">#rubykaraoke Tweets</a>
+            <script>!function(d,s,id){var 	js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script></p>
+			
 <div class="welcome">
   <p class="doc">
     <%= link_to "Built using Middleman", "http://middlemanapp.com/" %>
