--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -15,8 +15,8 @@ title: Welcome to Ruby Karaoke
 		<li>If it's your first time at Ruby Karaoke, you need to sing.<br /><small>(Just kidding singing is not mandatory, but is encouraged)</small></li>
 	</ul>
 	
-  </p><!-- .doc -->
-</div><!-- .welcome -->
+  </p>
+</div>
 
 <hr noshade>
 <br />
@@ -24,8 +24,4 @@ title: Welcome to Ruby Karaoke
 <p align = "center"><a class="twitter-timeline" data-dnt="true" href="https://twitter.com/hashtag/rubykaraoke" 	data-widget-id="527876011271020544">#rubykaraoke Tweets</a>
             <script>!function(d,s,id){var 	js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script></p>
 			
-<div class="welcome">
-  <p class="doc">
-    <%= link_to "Built using Middleman", "http://middlemanapp.com/" %>
-  </p><!-- .doc -->
-</div><!-- .welcome -->
+<%= partial "footer" %>
